@@ -60,6 +60,10 @@
       
       \item Dataset \code{npk} has been copied from \pkg{MASS} to allow
       more tests to be run without recommended packages being installed.
+      
+      \item The initialization of the regression coefficients for
+      non-degenerate differenced models in \code{arima()} has been
+      changed and in some examples avoids a local maximum.  (\PR{15396})
     }
   }
 
